--- a/my-vite-project/src/style.css
+++ b/my-vite-project/src/style.css
@@ -34,9 +34,25 @@ header {
   overflow: hidden;
 }
 
+.stats .container {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  position: absolute;
+  top: 31rem;
+  left: 17rem;
+}
+  
+
+
+.h3, h3 {
+  font-size: 1.75rem;
+  color: red;
+}
+
 .card-img {
   width: 100%;
-  height: 31rem;
+  height: 30rem;
   object-fit: cover;
 }
 
@@ -49,11 +65,18 @@ header {
   text-align: left;
 }
 
+.online{
+  width: 100%;
+  height: 10rem;
+  object-fit: cover;
+
+}
+
+
 .circus {
   height: 30rem;
   position: absolute;
-  right: 5rem;
-  z-index: 1;
+  right: 25rem;
 }
 
 .form-control {
@@ -118,3 +141,107 @@ header {
   border: none;
   cursor: pointer;
 }
+
+
+.red{
+  color: red;
+  margin: 5rem;
+}
+
+
+.red-2{
+  color: red;
+  text-align: center;
+}
+
+.paragraf{
+  margin: 4rem;
+}
+
+.paragraf-2{
+  margin: 4rem;
+}
+
+
+.icon-card {
+  background: white;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  width: 200px;
+}
+
+.icon-card-green{
+  background: #E2F3F0;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  width: 200px;
+  width: 320px;
+  margin: 1rem;
+}
+
+.icon-card-grey{
+  background: #DFE3EA;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  width: 200px;
+  width: 320px;
+  margin: 1rem;
+}
+
+
+.icon-card-yellow{
+  background: #fce8c3cb;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  width: 200px;
+  width: 320px;
+  margin: 1rem;
+}
+
+
+.icon-card-red{
+  background: #f7dcdc;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  width: 200px;
+  width: 320px;
+  margin: 1rem;
+}
+
+
+.icon {
+  font-size: 24px;
+  margin-right: 10px;
+  color: #555;
+}
+
+.icon-2 {
+  font-size: 24px;
+  margin-right: 10px;
+  color: #4CC083;
+}
+
+
+.icon-3 {
+  font-size: 24px;
+  margin-right: 10px;
+  color: #f0c14c
+}
+
+.icon-4 {
+  font-size: 24px;
+  margin-right: 10px;
+  color: #EC6C5B
+}
+
+.text-online {
+  text-align: center;
+}
+
+
+
